fix spacing between cards

--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -30,3 +30,8 @@ body {
   min-height: 50px;
   height: 50px;
 }
+
+.thumbnail-container {
+  padding-right: 8px;
+  padding-left: 8px;
+}
